--- a/index.html
+++ b/index.html
@@ -176,14 +176,6 @@
             </div>
           </div>
         </div>
-        <input id="permalink-input" type="text" readOnly />
-        <div id="permalink-btn" class="button permalink">
-          <span data-i18n="prices.copy-permalink"></span>
-          <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="copy" class="svg-inline--fa fa-copy fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-            <path fill="currentColor" d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"></path>
-          </svg>
-        </div>
-        <button type="button" id="reset" class="button button--reset" name="action" data-i18n="prices.reset"></button>
       </form>
 
 
@@ -191,20 +183,19 @@
 
       <div class="form__flex">
         <div class="form__row">
-          <h6 data-i18n="turnips.output"></h6>
-          <h3 id="turnip_output"></h3>
-        </div>
-        <div class="form__row">
           <h6 data-i18n="turnips.best_day"></h6>
           <h3 id="turnip_best_day"></h3>
         </div>
+        <div class="form__row">
+          <h6 data-i18n="turnips.output"></h6>
+          <h3 id="turnip_output" style="text-align: center"></h3>
+        </div>
       </div>
 
-      <h2>---</h2>
+      <button type="button" id="stats" class="button">Show me stats!</button>
 
-      <div class="collapse" id="collapse-wrapper">
-      <div class="chart-wrapper">
-        <canvas id="chart" width="100%" height="100"></canvas>
+      <div class="chart-wrapper" style="position: relative; height:400px: width: 90vw">
+        <canvas id="chart"></canvas>
       </div>
 
       <div class="table-wrapper">
@@ -265,9 +256,17 @@
           <tbody id="output"></tbody>
         </table>
       </div>
-    </div>
 
-  </div>
+      <input id="permalink-input" type="text" readOnly />
+      <div id="permalink-btn" class="button permalink">
+        <span data-i18n="prices.copy-permalink"></span>
+        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="copy" class="svg-inline--fa fa-copy fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+          <path fill="currentColor" d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"></path>
+        </svg>
+      </div>
+      <button type="button" id="reset" class="button button--reset" name="action" data-i18n="prices.reset"></button>
+
+    </div>
 
   </div>
 
@@ -278,11 +277,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/4.0.2/i18nextBrowserLanguageDetector.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.1/jquery-i18next.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.2.0/dist/confetti.browser.min.js"></script>
   <script src="js/chart.js"></script>
   <script src="js/predictions.js"></script>
   <script src="js/scripts.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.5/lib/darkmode-js.min.js"></script>
-  <script> new Darkmode({label: '🌓', buttonColorDark: '#fff00'}).showWidget();</script>
   <script src="js/translations.js"></script>
   <script src="js/contributors.js"></script>
   <script>
