Add sell button

--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
         </div>
       </div>
 
+      <button type="button" id="sold_now" class="button">I sold my turnips!</button>
+
       <button type="button" id="stats" class="button">Show me stats!</button>
 
       <div class="chart-wrapper" style="position: relative; height:400px: width: 90vw">
